sonar issue07