@@ -111,7 +111,7 @@ public class OllamaService implements EmbeddingService {
     public Response<List<Embedding>> embedTexts(List<TextSegment> textSegments) {
         List<String> texts = textSegments.stream()
                 .map(TextSegment::text)
-                .collect(Collectors.toList());
+                .toList();
         {
             List<Embedding> embeddings = new ArrayList<>();
 
@@ -133,7 +133,7 @@ public class OllamaService implements EmbeddingService {
                     embeddings.add(Embedding.from(vector));
 
                 } catch (Exception e) {
-                    throw new RuntimeException("Failed to generate embeddings", e);
+                    throw new ModuleException("Failed to generate embeddings", MuleVectorsErrorType.AI_SERVICES_FAILURE, e);
                 }
             }
 
