@@ -79,7 +79,9 @@ public class PineconeStoreIterator<Embedded> implements VectoreStoreIterator<Vec
 
       Map<String, Object> metadataMap = entry.getMetadata().getFieldsMap().entrySet().stream()
           .filter(e -> !"text_segment".equals(e.getKey()))
-          .collect(Collectors.toMap(Map.Entry::getKey, e -> ProtobufValueConverter.convertProtobufValue(e.getValue())));
+          .toList()
+          .stream()
+          .collect(java.util.stream.Collectors.toMap(Map.Entry::getKey, e -> ProtobufValueConverter.convertProtobufValue(e.getValue())));
 
       if (entry.getMetadata().getFieldsMap().containsKey("text_segment")) {
         text = entry.getMetadata().getFieldsMap().get("text_segment").getStringValue();
@@ -148,7 +150,7 @@ public class PineconeStoreIterator<Embedded> implements VectoreStoreIterator<Vec
 
       List<String> ids = listResponse.getVectorsList().stream()
           .map(vector -> vector.getId())
-          .collect(Collectors.toList());
+          .toList();
 
       paginationToken = listResponse.getPagination().getNext();
       hasMorePages = paginationToken != null && !paginationToken.isEmpty();
@@ -165,6 +167,7 @@ public class PineconeStoreIterator<Embedded> implements VectoreStoreIterator<Vec
   }
 
   public static class ProtobufValueConverter {
+    private ProtobufValueConverter() {}
     public static Object convertProtobufValue(com.google.protobuf.Value value) {
       if (value == null) return null;
       if (value.hasStringValue()) return value.getStringValue();
@@ -176,7 +179,7 @@ public class PineconeStoreIterator<Embedded> implements VectoreStoreIterator<Vec
       if (value.hasListValue()) {
         return value.getListValue().getValuesList().stream()
             .map(ProtobufValueConverter::convertProtobufValue)
-            .collect(Collectors.toList());
+            .toList();
       }
       if (value.hasStructValue()) return value.getStructValue().getFieldsMap();
       return null;
